Make cdb building *far* more efficient.
Putting stuff at the beginning of a list is *way* faster than putting stuff at
the end.

imported from: dustin@spy.net--projects/snippets--ocaml--1.0--patch-109

--- a/ocaml/2wire/lib/Makefile
+++ b/ocaml/2wire/lib/Makefile
@@ -27,6 +27,7 @@ libspy: $(PARTS)
 		fileutils.cmx extstring.cmx extlist.cmx extoption.cmx \
 		extstream.cmx linkedlist.cmx lru.cmx base64.cmx \
 		cdb.cmx netstring.cmx math.cmx
+	rm -f libspy.a
 	ln spy.a libspy.a
 
 
