Added the large file creator.
imported from: dustin@spy.net--projects-2004/snippets--ocaml--1.0--patch-6

--- a/ocaml/2wire/misc/Makefile
+++ b/ocaml/2wire/misc/Makefile
@@ -35,6 +35,10 @@ waitForSocket: waitForSocket.ml
 	$(OCAMLOPT) $(PROFILE) -o $@ -I ../lib unix.cmxa \
 		waitForSocket.ml
 
+largefile: largefile.ml
+	$(OCAMLOPT) $(PROFILE) -o $@ -I ../lib unix.cmxa \
+		largefile.ml
+
 resolver: resolver.ml
 	$(OCAMLOPT) $(PROFILE) -o $@ -I ../lib unix.cmxa spy.cmxa \
 		resolver.ml
