Added the stat rollup thing.
imported from: dustin@spy.net--projects-2004/snippets--ocaml--1.0--patch-18

--- a/ocaml/2wire/2wire/Makefile
+++ b/ocaml/2wire/2wire/Makefile
@@ -7,7 +7,7 @@ OCAMLC=ocamlc
 PROFILE=
 
 PROGS=parseSQLLog parseTimingLog rrdIndex indexGWAuth spreadsheetPivot \
-	mfgcdb mfgcdb.cmi extractAuthInfo snmap
+	mfgcdb mfgcdb.cmi extractAuthInfo snmap statRollup
 
 .SUFFIXES: .ml .mli .cmi .cmx
 
@@ -44,6 +44,10 @@ mfgcdb: mfgcdb.ml
 snmap: snmap.ml
 	$(OCAMLOPT) $(PROFILE) -o $@ -I ../lib \
 		unix.cmxa spy.cmxa snmap.ml
+
+statRollup: statRollup.ml
+	$(OCAMLOPT) $(PROFILE) -o $@ -I ../lib \
+		unix.cmxa spy.cmxa statRollup.ml
 
 extractAuthInfo: extractAuthInfo.ml mfgcdb.cmi
 	$(OCAMLOPT) $(PROFILE) -o $@ -I ../lib \
