More changes to manufactured gateway builder stuff.
imported from: dustin@spy.net--projects-2004/snippets--ocaml--1.0--patch-27

--- a/ocaml/2wire/2wire/Makefile
+++ b/ocaml/2wire/2wire/Makefile
@@ -30,6 +30,10 @@ extractKeys: extractKeys.ml mfgcdb.cmi
 	$(OCAMLOPT) $(PROFILE) -o $@ -I ../lib \
 		unix.cmxa dbm.cmxa spy.cmxa mfgcdb.cmx extractKeys.ml
 
+cdbprefix: cdbprefix.ml
+	$(OCAMLOPT) $(PROFILE) -o $@ -I ../lib \
+		unix.cmxa dbm.cmxa spy.cmxa cdbprefix.ml
+
 buildMfgCache: buildMfgCache.ml mfgcdb.cmi
 	$(OCAMLOPT) $(PROFILE) -o $@ -I ../lib \
 		unix.cmxa dbm.cmxa spy.cmxa mfgcdb.cmx buildMfgCache.ml
