replace begin/end with () (and add them where they clarify things)
imported from: dustin@spy.net--projects-2004/snippets--ocaml--1.0--patch-30

--- a/ocaml/2wire/lib/Makefile
+++ b/ocaml/2wire/lib/Makefile
@@ -17,7 +17,7 @@ testtop: $(PARTS)
 	$(OCAMLMKTOP) -o testtop unix.cma \
 		fileutils.cmo extstring.cmo extlist.cmo extoption.cmo \
 		extstream.cmo linkedlist.cmo lru.cmo base64.cmo \
-		cdb.cmo netstring.cmo math.cmo
+		cdb.cmo netstring.cmo
 
 libspy: $(PARTS)
 	$(MKLIB) -o spy \
