Went back to hashtbls in buildmfgcache
imported from: dustin@spy.net--projects-2004/snippets--ocaml--1.0--patch-47

--- a/ocaml/2wire/misc/Makefile
+++ b/ocaml/2wire/misc/Makefile
@@ -8,7 +8,7 @@ PROFILE=
 
 PROGS=mailCompress hlgrep missingNumbers magicSquare waitForSocket wx200 \
 	builddict cipher splitFreqs lncp resolver ager blockDigest blockDigest.cmi \
-	digestline cdbcat cdbpick cdbget
+	digestline cdbcat cdbpick cdbget cdbtest
 
 .SUFFIXES: .ml .mli .cmi .cmx
 
@@ -23,6 +23,10 @@ mailCompress: mailCompress.ml
 hlgrep: hlgrep.ml
 	$(OCAMLOPT) $(PROFILE) -o $@ -I ../lib \
 		unix.cmxa str.cmxa fileutils.cmx hlgrep.ml
+
+cdbtest: cdbtest.ml
+	$(OCAMLOPT) $(PROFILE) -o $@ -I ../lib \
+		unix.cmxa spy.cmxa cdbtest.ml
 
 cdbget: cdbget.ml
 	$(OCAMLOPT) $(PROFILE) -o $@ -I ../lib \
