Added my directory digester.
imported from: dustin@spy.net--projects-2004/snippets--ocaml--1.0--patch-75

--- a/ocaml/misc/Makefile
+++ b/ocaml/misc/Makefile
@@ -48,6 +48,10 @@ digestline: digestline.ml
 	$(OCAMLOPT) $(PROFILE) -o $@ -I ../lib \
 		unix.cmxa fileutils.cmx digestline.ml
 
+digestfiles: digestfiles.ml
+	$(OCAMLOPT) $(PROFILE) -o $@ -I ../lib \
+		unix.cmxa spy.cmxa digestfiles.ml
+
 missingNumbers: missingNumbers.ml
 	$(OCAMLOPT) $(PROFILE) -o $@ -I ../lib \
 		missingNumbers.ml
