Added the multimatcher.
imported from: dustin@spy.net--projects-2004/snippets--ocaml--1.0--patch-76

--- a/ocaml/misc/Makefile
+++ b/ocaml/misc/Makefile
@@ -52,6 +52,10 @@ digestfiles: digestfiles.ml
 	$(OCAMLOPT) $(PROFILE) -o $@ -I ../lib \
 		unix.cmxa spy.cmxa digestfiles.ml
 
+multimatch: multimatch.ml
+	$(OCAMLOPT) $(PROFILE) -o $@ -I ../lib \
+		unix.cmxa spy.cmxa multimatch.ml
+
 missingNumbers: missingNumbers.ml
 	$(OCAMLOPT) $(PROFILE) -o $@ -I ../lib \
 		missingNumbers.ml
