Some build fixes for purple.
imported from: dustin@spy.net--snippets/eiffel--main--1.0--patch-1

--- a/eiffel/pg/Makefile
+++ b/eiffel/pg/Makefile
@@ -3,17 +3,18 @@ EC=$(E) compile
 
 RPATH=-R /usr/local/pgsql/lib
 
-EFLAGS=-g -I/usr/local/pgsql/include
+LOADPATH=$(HOME)/lib/se.loadpath
+EFLAGS=-g -I/usr/local/pgsql/include -loadpath $(LOADPATH)
 # LFLAGS=-L/usr/local/pgsql/lib $(RPATH) -lpq
 LFLAGS=-L/usr/local/pgsql/lib -lpq
 
 FILES=Makefile pgtest.e pg.e pg_cstuff.c pg_replicate.e
 
-pgtest: pgtest.e pg.e pg_cstuff.c
-	$(EC) pgtest -o $@ $(EFLAGS) pg_cstuff.c $(LFLAGS)
+pgtest: pgtest.e pg.e pg_cstuff.o
+	$(EC) pgtest -o $@ $(EFLAGS) pg_cstuff.o $(LFLAGS)
 
-temploader: temploader.e pg.e pg_cstuff.c
-	$(EC) temploader.e -o $@ $(EFLAGS) pg_cstuff.c $(LFLAGS)
+temploader: temploader.e pg.e pg_cstuff.o
+	$(EC) temploader.e -o $@ $(EFLAGS) pg_cstuff.o $(LFLAGS)
 
 dist: $(FILES)
 	mkdir pg
@@ -30,3 +31,4 @@ clean:
 	rm -f pgtest
 	$(E) clean temploader
 	rm -f temploader
+	rm pg_cstuff.o
