I made changes to a generated makefile. Put them in the source.
imported from: dustin@spy.net--snippets/c--main--1.0--patch-10

--- a/c/net/tcp/waitforsocket/Makefile.in
+++ b/c/net/tcp/waitforsocket/Makefile.in
@@ -21,6 +21,10 @@ JUNK=$(OBJS) $(EXES) $(LINTS)
 waitforsocket: $(OBJS)
 	$(CC) $(CFLAGS) -o $@ $(OBJS) $(LDFLAGS)
 
+main.o: main.c waitforsocket.h
+
+sockets.o: sockets.c waitforsocket.h
+
 lint: $(LINTS)
 	$(LINT) $(LINTS)
 
