Fix up launch agent file handling since launchd is smarter now

--- a/launchd/com.caring.hgup.plist
+++ b/launchd/com.caring.hgup.plist
@@ -17,5 +17,7 @@
 	<string>/Users/dustin/caring/incoming</string>
 	<key>StartInterval</key>
 	<integer>120</integer>
+	<key>StandardOutPath</key>
+	<string>/dev/null</string>
 </dict>
 </plist>
