--- a/c/misc/scrabble/Makefile.in
+++ b/c/misc/scrabble/Makefile.in
@@ -1,10 +1,9 @@
 # PROFILE=-pg
-MYMALLOC=-DMYMALLOC
 CC=@CC@
-CFLAGS=@CFLAGS@ @DEFS@ $(PROFILE) -Imymalloc $(MYMALLOC)
+CFLAGS=@CFLAGS@ @DEFS@ $(PROFILE)
 LDFLAGS=@LDFLAGS@
-BOOTSTRAPOBJ=scoring_bootstrap.o dict_bootstrap.o mymalloc/mymalloc.o
-OBJ=dictionary.o scores.o scoring.o dict.o search.o mymalloc/mymalloc.o
+BOOTSTRAPOBJ=scoring_bootstrap.o dict_bootstrap.o
+OBJ=dictionary.o scores.o scoring.o dict.o search.o
 LIB=-L. -lscrabble
 RANLIB=@RANLIB@
 AR=@AR@
@@ -60,9 +59,6 @@ buildit: buildit.o libbscrabble.a
 
 buildit.o:
 	$(CC) $(CFLAGS) $(PROFILE) -DBOOTSTRAP -c -o $@ buildit.c
-
-mymalloc/mymalloc.o: mymalloc/mymalloc.c mymalloc/mymalloc.h
-	cd mymalloc && $(CC) $(MYMALLOC) -o mymalloc.o -c mymalloc.c
 
 clean:
 	rm -f libscrabble.a dict_main.o search_main.o scoring_main.o \
