Handle bidirectional MSP

--- a/c/msp/Makefile
+++ b/c/msp/Makefile
@@ -1,9 +1,9 @@
-CXXFLAGS=-Wall -Werror -I
+CFLAGS=-Wall -Werror -I -g
 
 msptest: msp.o msptest.o
-	$(CC) -o $@ msp.o msptest.o
+	$(CC) -g -o $@ msp.o msptest.o
 
 msp.o: msp.h msp.c Makefile
-	$(CC) -o $@ -c msp.c
+	$(CC) $(CFLAGS) -o $@ -c msp.c
 
 msptest.o: msp.h msptest.c  Makefile
